openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ghostwriter-classroom
  labels:
    name: ghostwriter-classroom
